--- a/src/components/TextSection.css
+++ b/src/components/TextSection.css
@@ -5,14 +5,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
+    padding: 0;
 }
 
 .text-box {
     background-color: white;
     border: 0.1875rem solid black;
     border-radius: 0.625rem;
-    padding: 5.4375rem 3.5rem;
+    padding: 3.5rem 3.5rem;
     max-width: 70rem;
     width: 90%;
     text-align: left;
